5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1596_1016.log
== SUBMITION (2019-04-02 17:05:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input())
b=float(input())
c=float(input())
s=(a+b+c)/2
from match import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.147923
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 8, in <module>
    from match import*
ImportError: No module named 'match'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:05:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input())
b=float(input())
c=float(input())
s=(a+b+c)/2
from match import*
A=sqrt(s*(s–a)*(s–b)*(s–c))
print(round(A,5))
-- EXECUTION TIME:
0.136558
-- ERROR:
  File "/home/codebench/codes/1596/1016/main.py", line 9
    A=sqrt(s*(s\u2013a)*(s\u2013b)*(s\u2013c))
                ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
